--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,7 +35,6 @@
   </div>
 </div>
 
-<%# Блок со списком вопросов к пользователю %>
 <div class="column-3-4">
   <div class="user-questions buffer-both">
     <div class="questions-list">
@@ -43,6 +42,23 @@
         <%= render partial: 'questions/question', object: question %>
       <% end %>
     </div>
-          <%= "Всего #{@questions.size} #{inclination(@questions.size, 'вопрос', 'вопроса', 'вопросов')}" %>
+
+    <div class="user-statistics container text-center">
+      <div class="column-1-3">
+        <h1 class="title-small"><%= @questions_count %></h1>
+        <p><%="#{inclination_questions(@questions_count, 'вопрос', 'вопроса', 'вопросов')}" %></p>        
+      </div>
+
+    <div class="column-1-3">
+      <h1 class="title-small"><%= @answers_count %></h1>
+      <p><%="#{inclination_answers(@answers_count, 'ответ', 'ответа', 'ответов')}" %></p>        
+    </div>
+
+    <div class="column-1-3">
+      <h1 class="title-small"><%= @unanswered_count %></h1>
+      <p>Без ответа</p>        
+    </div>
+    
+  </div>
   </div>
 </div>
