--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  * Этот файл называется манифести стилей и он определяет, какие стили будут
  * собраны в стилевой файл для вашего приложения.
  *
+ *= require jquery.minicolors
  * Подключаем reset.css
  *= require reset
  *
