--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -52,6 +52,12 @@
       <div class="form-action buffer-top">
         <%= f.submit 'Сохранить', class: 'button button-dark button-small' %>
       </div>
+
+      <% if current_user == @user %>
+      <div class="form-action buffer-top">
+      <%= link_to 'Удалить аккаунт', user_path(@user), method: :delete , data: { confirm: 'Вы точно хотите удалить аккаунт?'}%>
+      </div>
+      <% end %>
     <% end %>
   </div>
 </div>
