--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -32,7 +32,7 @@
 
       <div class="form-field">
         <%= f.label 'Цвет фона', class: 'form-label' %>
-        <%= f.text_field :custom_header, class: 'colorpicker form-text-field' %>
+        <%= f.color_field :custom_header, class: 'form-text-field' %>
       </div>
 
       <div class="buffer-top-large buffer-bottom">
