--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,21 +1,31 @@
 <div class="question">
   <div class="question-content">
-    <%# Текст вопроса %>
     <div class="question-text text-lead">
       <%= question.text %>
     </div>
-    <%# Текст ответа, если он есть %>
+
     <% if question.answer.present? %>
       <div class="question-answer text-lead">
         <%= question.answer %>
       </div>
     <% end %>
-    <%# Дата создания вопроса (отформатированная) %>
+    <div class="question-author">
+      Автор:
+      <% if question.author.present? %>
+        <%= link_to "#{question.author.name}", user_path(question.author) %>
+      <% else %>
+        аноним
+      <% end %>
+    </div>
+
     <div class="question-date">
-      <%= l(question.created_at, format: :short) %>
+      <%= question.created_at.strftime('%d %b %H:%M') %>
     </div>
   </div>
+
   <%# Если адресат вопроса — текущий пользователь, он может редактировать вопрос %>
+  <%# и отвечать на него %>
+<%# Если адресат вопроса — текущий пользователь, он может редактировать вопрос %>
   <%# и отвечать на него %>
   <% if question.user == current_user %>
     <%# Определяем какая будет иконка, если у вопроса нет ответа, то иконка %>
